@@ -48,7 +48,7 @@
     <jempbox.version>1.8.16</jempbox.version>
     <netcdf-java.version>4.5.5</netcdf-java.version>
     <sis.version>0.8</sis.version>
-    <parso.version>2.0.9</parso.version>
+    <parso.version>2.0.10</parso.version>
     <!-- used by POI, PDFBox and Jackcess ...try to sync -->
     <bouncycastle.version>1.60</bouncycastle.version>
     <commonsexec.version>1.3</commonsexec.version>
@@ -60,7 +60,7 @@
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
-      <version>4.0.0</version>
+      <version>${osgi.core.version}</version>
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
@@ -189,7 +189,7 @@
     <dependency>
       <groupId>com.github.luben</groupId>
       <artifactId>zstd-jni</artifactId>
-      <version>1.3.5-3</version>
+      <version>1.3.7-1</version>
       <scope>provided</scope>
     </dependency>
 
@@ -281,7 +281,7 @@
     <dependency>
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm</artifactId>
-      <version>6.2</version>
+      <version>7.0</version>
     </dependency>
     <dependency>
       <groupId>com.googlecode.mp4parser</groupId>
@@ -301,7 +301,7 @@
     <dependency>
       <groupId>com.rometools</groupId>
       <artifactId>rome</artifactId>
-      <version>1.5.1</version>
+      <version>1.11.1</version>
       <exclusions>
         <exclusion>
           <groupId>org.jdom</groupId>
@@ -497,7 +497,7 @@
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
-      <version>4.3.0</version>
+      <version>5.0.0</version>
     </dependency>
 
     <!-- grib's current jsoup is vulnerable to xss
@@ -579,7 +579,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-csv</artifactId>
-      <version>1.5</version>
+      <version>1.6</version>
     </dependency>
 
     <dependency>
@@ -714,7 +714,7 @@
     <dependency>
       <groupId>org.apache.uima</groupId>
       <artifactId>uimafit-core</artifactId>
-      <version>2.2.0</version>
+      <version>2.4.0</version>
       <exclusions>
         <exclusion>
           <groupId>org.apache.uima</groupId>
@@ -751,7 +751,7 @@
     <dependency>
       <groupId>org.apache.uima</groupId>
       <artifactId>uimaj-core</artifactId>
-      <version>2.9.0</version>
+      <version>3.0.0</version>
     </dependency>
 
     <dependency>
